[project]
name = "market-bridge"
version = "0.1.0"
description = "MCP server bridging trading platforms to Claude for real-time /ES futures data analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pytz>=2026.1.post1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
market-bridge = "market_bridge.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_bridge"]
